<resources>
    <string name="app_name">LIVE SCORE AND SCHEDULE OF IPL 2019</string>
        <string name="msdoni">MS Dhoni</string>
        <string name="ABD">AB De viliars</string>
    <string name="rohit">Rohit Sharma</string>
    <string name="dinesh">Dinesh Kartik</string>
    <string name="virat">Virat Kohli</string>
    <string name="rahane">Ajinkya Rahane</string>
    <string name="manish">Manish Pandey</string>
    <string name="iyer">Shreyas Iyer</string>
    <string name="ashwin">Ravichandran Ashwin</string>
    <string name="brabo"> DJ Bravo</string>
    <string name="raina"> Suresh Raina</string>
    <string name="watson"> Shane Watson</string>
    <string name="jadeja"> Ravindra Jadeja</string>
    <string name="sam"> Sam Billings</string>
    <string name="raidu">  Ambati Raidu</string>
    <string name="david">David Willey</string>
    <string name="chahar"> Deepak Chahar</string>
    <string name="du"> Du Plessis</string>
    <string name="murali"> Murali Vijay</string>
    <string name="tahir"> Imran Tahir</string>
    <string name="kmasif"> K M Asif</string>
    <string name="ngidi"> Lungi Ngidi</string>
    <string name="thakur"> Shardul Thakur</string>
    <string name="santer"> Mitchell Santner</string>
    <string name="kader">  Kedar Jadhav</string>
    <string name="shorey"> Dhruv Shorey</string>
    <string name="harbajan"> Harbhajan Singh</string>
    <string name="karn"> Karn Sharma</string>
        <string-array name="a">

            <item>MS Dhoni</item>
            <item> DJ Bravo</item>
            <item> Suresh Raina</item>
            <item> Shane Watson</item>
            <item> Ravindra Jadeja</item>
            <item>Sam Billings</item>
            <item> Ambati Raidu</item>
            <item> David Willey</item>
            <item> Deepak Chahar</item>
            <item> Du Plessis</item>
            <item> Murali Vijay</item>
            <item> Imran Tahir</item>
            <item> K M Asif</item>
            <item> Lungi Ngidi</item>
            <item> Shardul Thakur</item>
            <item> Mitchell Santner</item>
            <item> Kedar Jadhav</item>
            <item>Dhruv Shorey</item>
            <item> Harbhajan Singh</item>
            <item>Karn Sharma</item>

        </string-array>
    <string-array name="b">

        <item>Rohit Sharma</item>
        <item>Mustafizur\nRahman</item>
        <item>Hardik Pandya</item>
        <item> Kieron Pollard</item>
        <item> Krunal Pandya</item>
        <item> Mitchell\nMcLanegan</item>
        <item> Jaspreet Bumrah</item>
        <item> Evin Lewis</item>
        <item> Ishan Kishan</item>
        <item> Ben Cutting</item>
        <item> Mayank Markande</item>
        <item>JP Duminy</item>
        <item> Surya Kumar </item>
        <item> Adam Milne</item>
        <item> Aditya Tare</item>
        <item> Siddesh Lad</item>
        <item>Rahul Chahar</item>
        <item> Anukul Roy</item>
        <item> Tajinder Singh</item>
        <item>M.D.Nidheesh</item>


    </string-array>
    <string-array name="c">

        <item>Dinesh Kartik</item>
        <item>Cris Lynn</item>
        <item>Robin Uthappa</item>
        <item>Sunil Narayan</item>
        <item>Kuldeep Yadav</item>
        <item>Andre Russel</item>
        <item>Nitish Rana</item>
        <item>Tom Curren</item>
        <item>Piyush Chawla</item>
        <item>Javon Searles</item>
        <item>Prasidhh Krishna</item>
        <item>Cameron Delport</item>
        <item>Rinku Singh</item>
        <item>Kamlesh Nagarkoti</item>
        <item>Shivam Mavi</item>
        <item>Apoorv Wankhede</item>


    </string-array>
    <string-array name="d">

        <item>Virat Kohli</item>
        <item> A.B. D’Villers</item>
        <item> Yezuvendra Chahal</item>
        <item> Moeen Ali</item>
        <item> Parthiv Patel</item>
        <item>Tim Southee</item>
        <item> Mohammed Siraj</item>
        <item> Shimron Hetmyer</item>
        <item> Devdatt Padikal</item>
        <item> Marcos Stoinis</item>
        <item> Umesh Yadav</item>
        <item> Colin D’Grandhome</item>
        <item>Washington\n Sunder</item>
        <item> Henric Klaseen</item>
        <item> Shivam Dubey</item>
        <item> Nathan Coulter</item>
        <item> Navdeep Saini</item>
        <item>Gurkeerat Singh</item>
        <item>Kulwant Khejroliya</item>
        <item>Pawan Negi</item>

    </string-array>
    <string-array name="e">

        <item>Ajinkya Rahane</item>
        <item> Steve Smith</item>
        <item> Sanju Samson</item>
        <item> Jos Buttler</item>
        <item> Stuart Binny</item>
        <item>Ben Stokes</item>
        <item> Dhaval Kulkarni</item>
        <item> Jofra Archer</item>
        <item>Krishnappa\nGowtham</item>
        <item> Mahipal Lomror</item>
        <item> Shreyas Gopal</item>
        <item>Prashant Chopra</item>
        <item>Rahul Tripathi</item>
        <item>Jaydev Unadkat</item>


    </string-array>
    <string-array name="f">

        <item>Manish Pandey</item>
        <item>David Warner</item>
        <item>Deepak Hudda</item>
        <item>Kane Williamson</item>
        <item>Tanmay Agarwal</item>
        <item>Rashid Khan</item>
        <item> Bipul Sharma</item>
        <item> Md. Nabi</item>
        <item> Khaleel Ahemad</item>
        <item>Shakib Al Hassan</item>
        <item> Basil Thampi</item>
        <item> Alex Hales</item>
        <item>Bhuvneshwar Kumar</item>
        <item> Yusuf Pathan</item>
        <item> Srivats Goswami</item>
        <item>carlos Brathwaite</item>
        <item> Sachin Baby</item>
        <item>Chris Jordan</item>
        <item>Siddharth Kaul</item>
        <item>Billy Stanlake</item>
        <item>T. Natrajan</item>
        <item>Sandeep Sharma</item>

    </string-array>
    <string-array name="g">

        <item>Shreyas Iyer</item>
        <item>Rishabh Pant</item>
        <item>Shikhar Dhawan</item>
        <item>Chris Morris</item>
        <item>Amit Mishra</item>
        <item>Trent Bault</item>
        <item> Shahbaz Nadeem</item>
        <item>Colin Munro</item>
        <item>Sandeep Lamichhane</item>
        <item>Liam Plunkett</item>
        <item> Jayant Yadav</item>
        <item> Kagiso Rabada</item>
        <item>Gurkeerat Singh</item>
        <item> Sayan Ghosh</item>
        <item> Rahul Tewatiya</item>
        <item>Avesh Khan</item>
        <item> Harshal Patel</item>
        <item>Manjot Kalra</item>
        <item>Abhishek Sharma</item>
        <item>Prithvi Shaw</item>


    </string-array>
    <string-array name="h">

        <item>Ravichandran Ashwin</item>
        <item>Cris Gayle</item>
        <item>K.L. Rahul</item>
        <item>Andrew Tye</item>
        <item>Mandeep Singh</item>
        <item>David Miller</item>
        <item> Mohammed Shami</item>
        <item>Nicolas Pooran</item>
        <item>Sarfaraz Khan</item>
        <item>Moises Henriques</item>
        <item> Ankit Rajpoot</item>
        <item> Mujeeb Ur Rahman</item>
        <item>Karun Nair</item>
        <item> Mayank Agarwal</item>



    </string-array>
        <string name="share">Share App\n</string>
        <string name="Stadium">Stadium\n</string>
        <string name="rateus">Rate Us\n</string>
        <string name="international">international Player</string>
        <string name="mumbaisquad">Mumbai Squad</string>
        <string name="csksquad">Chennai Squad</string>
        <string name="ddsquad">Delhi Squad</string>
        <string name="rcbsquad">Bangalore Squad</string>
        <string name="srssquad">Hyderabad Squad</string>
        <string name="rrsquad">Rajasthan Squad</string>
        <string name="kkrsquad">Kolkata Squad</string>
        <string name="kixpsquad">Punjab Squad</string>
        <string name="Tname1">	Chennai Super Kings (CSK)	</string>
        <string name="Tname2">	Mumbai Indians \n(MI)</string>
        <string name="Tname3">	Kolkata Knight Riders (KKR)</string>
        <string name="Tname4">Royal Challengers Bangalore (RCB)	</string>
        <string name="Tname5">Rajasthan Royals (RR)</string>
        <string name="Tname6">		Sun Risers Hyderabad (SRH)</string>
        <string name="Tname7">	Delhi Capitals \n(DC)</string>
        <string name="Tname8">	Kings XI Punjab (KXIP)</string>
    <string name="stadium1">


       \t\t\t\t\t\t\t\tBangalore\n\n
        M. Chinnaswamy Stadium\n\n
       Royal Challengers Bangalore\n\n
          Capacity: 35,000\n\n

    </string>
    <string name="stadium2">

\t\t\t\t\t\t\tDelhi\n\n
	Feroz Shah Kotla Stadium\n\n
        Delhi Capitals\n\n
	Capacity: 41,000\n\n
    </string>
    <string name="stadium3">


\t\t\t\t\t\t\tHyderabad\n\n
        	Rajiv Gandhi International Stadium\n\n
	 Sunrisers Hyderabad\n\n

	Capacity: 55,000\n\n
    </string>
    <string name="stadium4">
\t\t\t\t\t\t\tMumbai\n\n
  Wankhede Stadium\n\n
Mumbai Indians and
Playoffs\n\n
Capacity: 33,000\n\n
    </string>
    <string name="stadium5">


\t\t\t\t\t\t\tChennai\n\n
        	M. A. Chidambaram Stadium\n\n
		     Chennai Super Kings\n\n
             Capacity: 39,000\n\n
    </string>
    <string name="stadium6">


 \t\t\t\t\t\t\tMohali\n
Punjab Cricket Association IS Bindra Stadium\n\n
	Kings XI Punjab\n\n
        Capacity: 26,000\n\n
    </string>
    <string name="stadium">


\t\t\t\t\t\t\tKolkata	\n\n
        Eden Gardens Stadiumn\n\n
       Kolkata Knight Riders\n\n
        Capacity: 68,000\n\n
    </string>
    <string name="stadium8">


\t\t\t\t\t\t\tJaipur\n\n
        Sawai Mansingh Stadium\n\n
        Rajasthan Royals\n\n
        Capacity: 25,000\n\n
    </string>
    <string name="winner1">


       Season(2008)\n\n
    Winner : Rajasthan Royals\n\n
         RAJASTHAN \t Vs \tCHENNAI\n\n
      Runner-up : Chennai Super Kings\n\n
    </string>
    <string name="winner2">


       Season(2009)\n\n
    Winner : Deccan Chargers\n\n
         DECCAN \t Vs \tBANGALORE\n\n
      Runner-up : Royal Challengers Bangalore\n\n
    </string>
    <string name="winner3">


       Season(2010)\n\n
    Winner : Chennai Super Kings\n\n
         CHENNAI \t Vs \tMUMBAI\n\n
      Runner-up : Mumbai Indians\n\n
    </string>
    <string name="winner4">


       Season(2011)\n\n
    Winner : Chennai Super Kings\n\n
         CHENNAI \t Vs \tBANGALORE\n\n
      Runner-up : Royal Challengers Bangalore\n\n
    </string>
    <string name="winner5">


       Season(2012)\n\n
    Winner : Kolkata Knight Riders\n\n
         KOLKATA \t Vs \t CHENNAI\n\n
      Runner-up :Chennai Super Kings\n\n
    </string>
    <string name="winner6">


       Season(2013)\n\n
    Winner : Mumbai Indians\n\n
         MUMBAI \t Vs \t CHENNAI\n\n
      Runner-up :Chennai Super Kings\n\n
    </string>
 <string name="winner7">


       Season(2014)\n\n
    Winner : Kolkata Knight Riders\n\n
         KOLKATA \t Vs \t PUNJAB\n\n
      Runner-up :Kings XI Punjab\n\n
    </string>
    <string name="winner8">


       Season(2015)\n\n
    Winner : Mumbai Indians\n\n
         MUMBAI \t Vs \t CHENNAI\n\n
      Runner-up :Chennai Super Kings\n\n
    </string>
    <string name="winner9">


       Season(2016)\n\n
    Winner : Sunrisers Hyderabad\n\n
         HYDERABAD \t Vs \t BANGALORE\n\n
      Runner-up :Royal Challengers Bangalore\n\n
    </string>
    <string name="winner10">


       Season(2017)\n\n
    Winner : Mumbai Indians\n\n
         MUMBAI \t Vs \t PUNE\n\n
      Runner-up :Rising Pune Supergiant\n\n
    </string>
    <string name="winner11">


       Season(2018)\n\n
    Winner : Chennai Super Kings\n\n
         CHENNAI \t Vs \t HYDERABAD\n\n
      Runner-up : Sunrisers Hyderabad\n\n
    </string>
</resources>