<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/button_background">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/mumbai"
            android:paddingTop="10dp"
            android:text="@string/stadium4"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/csk"
            android:paddingTop="10dp"
            android:text="@string/stadium5"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/rcb"
            android:paddingTop="10dp"
            android:text="@string/stadium1"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/dd"
            android:paddingTop="10dp"
            android:text="@string/stadium2"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/srs"
            android:paddingTop="10dp"
            android:text="@string/stadium3"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/kxip"
            android:paddingTop="10dp"
            android:text="@string/stadium6"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/kkr"
            android:paddingTop="10dp"
            android:text="@string/stadium"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/rr"
            android:paddingTop="10dp"
            android:text="@string/stadium8"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />



    </LinearLayout>
</ScrollView>