<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/button_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/rr"
            android:drawableRight="@drawable/csk"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:padding="10dp"
            android:text="@string/winner1"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/dc"
            android:drawableRight="@drawable/rcb"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:padding="10dp"
            android:text="@string/winner2"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/csk"
            android:drawableRight="@drawable/mumbai"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:padding="10dp"
            android:text="@string/winner3"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/csk"
            android:drawableRight="@drawable/rcb"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:padding="10dp"
            android:text="@string/winner4"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/kkr"
            android:drawableRight="@drawable/csk"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:padding="10dp"
            android:text="@string/winner5"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/mumbai"
            android:drawableRight="@drawable/csk"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:padding="10dp"
            android:text="@string/winner6"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/kkr"
            android:drawableRight="@drawable/kxip"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:padding="10dp"
            android:text="@string/winner7"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/mumbai"
            android:drawableRight="@drawable/csk"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:padding="10dp"
            android:text="@string/winner8"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/srs"
            android:drawableRight="@drawable/rcb"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:padding="10dp"
            android:text="@string/winner9"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/mumbai"
            android:drawableRight="@drawable/pune1"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:padding="10dp"
            android:text="@string/winner10"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/csk"
            android:drawableRight="@drawable/srs"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:padding="10dp"
            android:text="@string/winner11"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />



    </LinearLayout>
</ScrollView>