<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/button_background"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/button4"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/Tname1"
            android:textSize="13sp"
            android:drawableTop="@drawable/csk"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background"
            android:textColor="#FFFFFF"
            android:padding="5dp"
            android:drawablePadding="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"

            />

        <Button
            android:id="@+id/button5"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/Tname2"
            android:paddingTop="10dp"
            android:drawableTop="@drawable/mumbai"
            android:textSize="13sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_background"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:drawablePadding="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/button6"
            android:layout_width="150dp"
            android:drawableTop="@drawable/kkr"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/Tname3"
            android:textSize="13sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_background"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:drawablePadding="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            />
        <Button
            android:id="@+id/button7"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/Tname4"
            android:drawableTop="@drawable/rcb"
            android:paddingTop="10dp"
            android:textSize="13sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_background"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:drawablePadding="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <Button
            android:id="@+id/button8"
            android:layout_width="150dp"
            android:paddingTop="10dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/rr"
            android:text="@string/Tname5"
            android:textSize="13sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_background"
            android:drawablePadding="2dp"
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            />
        <Button
            android:id="@+id/button9"
            android:layout_width="150dp"
            android:paddingTop="10dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/srs"
            android:text="@string/Tname6"
            android:textSize="13sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_background"
            android:drawablePadding="2dp"
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <Button
            android:id="@+id/button10"
            android:layout_width="150dp"
            android:paddingTop="10dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/dd"
            android:text="@string/Tname7"
            android:textSize="13sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_background"
            android:drawablePadding="2dp"
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            />
        <Button
            android:id="@+id/button11"
            android:layout_width="150dp"
            android:paddingTop="10dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/kxip"
            android:text="@string/Tname8"
            android:textSize="13sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_background"
            android:drawablePadding="2dp"
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            />
    </LinearLayout>

</LinearLayout>